# service/member/serializers.py
@@ -1,13 +1,10 @@
 from rest_framework import serializers
 from django.apps import apps
-from django.conf import settings
-from django.db import transaction
 from drf_spectacular.utils import extend_schema_field
 
-from common.constants import GameStatus, PressType
+from common.constants import GameStatus
 
 ChannelMember = apps.get_model("channel", "ChannelMember")
-ChannelMessage = apps.get_model("channel", "ChannelMessage")
 
 
 class BaseMemberSerializer(serializers.Serializer):
@@ -86,15 +83,6 @@ class MemberSerializer(BaseMemberSerializer):
     civil_disorder = serializers.BooleanField(read_only=True)
     seeking_replacement = serializers.BooleanField(read_only=True)
     replaceable = serializers.BooleanField(read_only=True)
-    intro_message = serializers.CharField(
-        required=False,
-        allow_blank=True,
-        write_only=True,
-        max_length=settings.CHAT_MESSAGE_MAX_CHARS,
-        error_messages={
-            "max_length": f"Messages cannot be longer than {settings.CHAT_MESSAGE_MAX_CHARS} characters."
-        },
-    )
 
     @extend_schema_field(serializers.BooleanField)
     def get_is_game_creator(self, obj):
@@ -106,22 +94,9 @@ class MemberSerializer(BaseMemberSerializer):
     def create(self, validated_data):
         game = self.context["game"]
         user = self.context["request"].user
-
-        with transaction.atomic():
-            member = game.members.create(user=user)
-            public_channels = list(game.channels.filter(private=False))
-            ChannelMember.objects.bulk_create(
-                [ChannelMember(member=member, channel=ch) for ch in public_channels]
-            )
-
-            intro_message = validated_data.get("intro_message")
-            public_channel = public_channels[0] if public_channels else None
-            if intro_message and public_channel is not None and game.press_type != PressType.NO_PRESS and not game.anonymous:
-                ChannelMessage.objects.create(
-                    channel=public_channel,
-                    sender=member,
-                    phase=game.current_phase,
-                    body=intro_message,
-                )
-
+        member = game.members.create(user=user)
+        public_channels = game.channels.filter(private=False)
+        ChannelMember.objects.bulk_create(
+            [ChannelMember(member=member, channel=ch) for ch in public_channels]
+        )
         return member
